added thumbnails and fixed naming issues

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<div id="wrapper">	
 			<nav>
 				<ul>
-					<li><a class="navanchors" href="index.html">Home</a></li>
-					<li><a class="navanchors" href="about.html">About</a></li>
-					<li><a class="navanchors" href="contact.html">Contact</a></li>
-					<li><a class="navanchors" href="helpout.html">Help Me Out</a></li>
+					<li class="navanchors"><a href="index.html">Home</a></li>
+					<li class="navanchors"><a href="about.html">About</a></li>
+					<li class="navanchors"><a href="contact.html">Contact</a></li>
+					<li class="navanchors"><a href="helpout.html">Help Me Out</a></li>
 				</ul>
 			</nav>
 			
@@ -61,12 +61,12 @@
 				<h2>Hello Space!</h2>
 			
 				<p>These are some images I have collected from various sites.</p>
-		
+				
 				<ul>
-					<li><a class="imageanchors" href="images/messier.jpg">Messier</a></li>
-					<li><a class="imageanchors" href="images/doradus.jpg">Doradus</a></li>
-					<li><a class="imageanchors" href="images/abell.jpg">Abell</a></li>
-					<li><a class="imageanchors" href="images/seagull-nebula.jpg">Seagull</a></li>
+					<li class="imageanchors"><a href="images/messier.jpg" title="Messier"><img src="images/messier_thumb.jpg" alt="" height="100" width="100"></a></li>
+					<li class="imageanchors"><a href="images/doradus.jpg" title="Doradus"><img src="images/doradus_thumb.jpg" alt="" height="100" width="100"></a></li>
+					<li class="imageanchors"><a href="images/abell.jpg" title="Abell"><img src="images/abell_thumb.jpg" alt="" height="100" width="100"></a></li>
+					<li class="imageanchors"><a href="images/seagull-nebula.jpg" title="Seagull"><img src="images/seagull-nebula-thumb.jpg" alt="" height="100" width="100"></a></li>
 				</ul>
 			</aside>
 		
